@@ -721,9 +721,7 @@ static void R_DrawAliasModel (entity_t *e)
 	static float	tmatrix[3][4];
 	float		entScale;
 	float		xyfact = 1.0, zfact = 1.0; // avoid compiler warning
-	qpic_t		*stonepic;
-	glpic_t		*gl;
-	char		temp[80];
+	int		skinnum;
 	int		mls;
 
 	clmodel = currententity->model;
@@ -928,26 +926,34 @@ static void R_DrawAliasModel (entity_t *e)
 		model_constant_alpha = 1.0f;
 	}
 
-	if (currententity->skinnum >= 100)
+	skinnum = currententity->skinnum;
+	if (skinnum >= 100)
 	{
-		if (currententity->skinnum > 255)
-		{
+		if (skinnum > 255)
 			Sys_Error ("skinnum > 255");
-		}
 
-		if (gl_extra_textures[currententity->skinnum-100] == GL_UNUSED_TEXTURE) // Need to load it in
+		if (gl_extra_textures[skinnum - 100] == GL_UNUSED_TEXTURE) // Need to load it in
 		{
-			q_snprintf (temp, sizeof(temp), "gfx/skin%d.lmp", currententity->skinnum);
+			qpic_t		*stonepic;
+			glpic_t		*gl;
+			char		temp[80];
+
+			q_snprintf (temp, sizeof(temp), "gfx/skin%d.lmp", skinnum);
 			stonepic = Draw_CachePic(temp);
 			gl = (glpic_t *)stonepic->data;
-			gl_extra_textures[currententity->skinnum-100] = gl->texnum;
+			gl_extra_textures[skinnum - 100] = gl->texnum;
 		}
 
-		GL_Bind(gl_extra_textures[currententity->skinnum-100]);
+		GL_Bind(gl_extra_textures[skinnum - 100]);
 	}
 	else
 	{
-		GL_Bind(paliashdr->gl_texturenum[currententity->skinnum]);
+		if ((skinnum >= paliashdr->numskins) || (skinnum < 0))
+		{
+			Con_DPrintf ("%s: no such skin # %d\n", __thisfunc__, skinnum);
+			skinnum = 0;
+		}
+		GL_Bind(paliashdr->gl_texturenum[skinnum]);
 
 		// we can't dynamically colormap textures, so they are cached
 		// seperately for the players.  Heads are just uncolored.
